Customised devise for users

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,19 @@
     <header>
       <%= render "partials/navbar"%>
     </header>
+
     <div class="container">
+      <% if notice %>
+      <p class="alert alert-success"><%= notice %></p>
+      <% end %>
+      <% if alert %>
+      <p class="alert alert-danger"><%= alert %></p>
+      <% end %>
+    </div>
+    
+    <div class="container">
+
+
       <%= yield %>
     </div>
 
