--- a/app/views/bookings/_form.html.erb
+++ b/app/views/bookings/_form.html.erb
@@ -1,7 +1,6 @@
 <%= form_for @booking, remote: true do |f| %>
   <%= date_field(:booking, :date) %>
   <%= time_field(:booking, :start_time) %>
-  <%= text_field(:booking, :facility_id) %>
 
   <div class="row">
     <% @facilities.each do |fac| %>
@@ -13,7 +12,8 @@
   </div>
 
   <% hidden_field_tag 'facility_type_id', params[:facility_type_id] %>
+  <% hidden_field_tag 'user_id', current_user.id %>
 
   <%= params[:facility_type_id] %>
-
+  <%= current_user.inspect %>
 <% end %>
