--- a/app/views/bookings/_form.html.erb
+++ b/app/views/bookings/_form.html.erb
@@ -1,20 +1,29 @@
+<%= month_calendar events: @bookings do |date, bookings| %>
+  <%= date %>
+  <% bookings.each do |booking| %>
+    <% if date == booking.booking_date && booking.facility_type_id.to_s == params[:facility_type_id] then %>
+      <div>
+        <%= booking.id%>
+      </div>
+    <% end %>
+  <% end %>
+<% end %>
+
+<br>
+<br>
+<br>
+
 <%= form_for @booking, remote: true do |f| %>
 
-<% if @booking.errors.any? %>
-  <div id="error_explanation">
-    <h2><%= pluralize(@booking.errors.count, "error") %> prohibited this idea from being saved:</h2>
-
-    <ul>
-    <% @booking.errors.full_messages.each do |message| %>
-      <li><%= message %></li>
-    <% end %>
-    </ul>
-  </div>
-<% end %>
   <%= hidden_field(:booking, :facility_type_id, :value => params[:facility_type_id]) %>
   <%= hidden_field(:booking, :user_id, :value => current_user.id) %>
-  <%= date_field(:booking, :date) %>
-  <%= time_field(:booking, :start_time) %>
+  <%= date_field(:booking, :booking_date) %>
+
+  <% if params[:facility_type_id] == "1" then %>
+    <%= time_field(:booking, :start_at, :value => "16:00:00") %>
+    <% else %>
+    <%= time_field(:booking, :start_at) %>
+  <% end %>
 
   <div class="row">
     <% @facilities.each do |fac| %>
@@ -25,11 +34,19 @@
     <% end %>
   </div>
 
+<br>
+<br>
+  <div class="">
+    <p>
+      <%= params[:facility_type_id] %>
+      <%= current_user.inspect %>
+    </p>
 
+  </div>
 
-  <%= params[:facility_type_id] %>
-  <%= current_user.inspect %>
+<br>
+<br>
   <div class="actions">
-  <%= f.submit %>
-</div>
+    <%= f.submit %>
+  </div>
 <% end %>
