--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,5 +1,4 @@
-<!-- <h1>Bookings#new</h1>
-<p>Find me in app/views/bookings/new.html.erb</p> -->
+<!-- this form is no longer necessary -->
 
 <%= form_for @booking do |f| %>
 <div class="row">
