--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,25 @@
-<h1>Welcome#index</h1>
-<p>Find me in app/views/welcome/index.html.erb</p>
+<h1>Notice Board</h1>
+<div class="container">
+  <h4>Tennis:</h4>
+
+ <% @results.each do |result|%>
+     <pre>
+       <a href="<%=result.at_css("a")['href']%>" target="_blank"><%=result.at_css("a h3 span").text%></a>
+    </pre>
+  <% end%>
+<a href="http://bleacherreport.com/tennis">Source of this information: http://bleacherreport.com/tennis</a>
+
+<h2>Swimming:</h2>
+<% @swimming_results.each do |single_swim|%>
+    <pre>
+        <a href="<%=URI.join("http://www.bbc.com", single_swim.at_css("h3 a")['href']).to_s%>" target="_blank"><%=single_swim.at_css("h3 a span").text%></a>
+    </pre>
+  <%end%>
+<a href="http://www.bbc.com/sport/swimming">Source of this information: http://www.bbc.com/sport/swimming</a>
+
+<h4>Events Around you!</h4>
+<% @events.each do |event|%>
+<pre>
+  <%=event.at_css("div.list-card__body").text.strip%>
+</pre>
+<%end%>
