Booking form: Date now selectable by clicking on calendar; now able to render available timeslots

--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -10,4 +10,5 @@
 
 <%= link_to 'Test', new_booking_path, remote: true %>
 
+<div id="calendar" style="width:640px;height:480px;border:1px solid black"></div>
 <div id="booking-form" style="width:640px;height:480px;border:1px solid black"></div>
