--- a/app/views/bookings/_form.html.erb
+++ b/app/views/bookings/_form.html.erb
@@ -1,36 +1,52 @@
-<%= month_calendar events: @bookings do |date, bookings| %>
-  <%= date %>
-  <% bookings.each do |booking| %>
-    <% if date == booking.booking_date && booking.facility_type_id.to_s == params[:facility_type_id] then %>
-      <div>
-        <%= booking.id%>
-      </div>
-    <% end %>
-  <% end %>
-<% end %>
-
-<br>
-<br>
-<br>
-
 <%= form_for @booking, remote: true do |f| %>
 
   <%= hidden_field(:booking, :facility_type_id, :value => params[:facility_type_id]) %>
   <%= hidden_field(:booking, :user_id, :value => current_user.id) %>
-  <%= date_field(:booking, :booking_date) %>
+  <%= hidden_field(:booking, :booking_date, :value => Date.today.strftime("%Y-%m-%d")) %>
 
-  <% if params[:facility_type_id] == "1" then %>
-    <%= time_field(:booking, :start_at, :value => "16:00:00") %>
-    <% else %>
-    <%= time_field(:booking, :start_at) %>
-  <% end %>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
   <div class="row">
+    <div class="col-md-4">
     <% @facilities.each do |fac| %>
-      <% if fac.facility_type_id == params[:facility_type_id].to_i then %>
-        <%= radio_button(:booking, :facility_id, fac.id) %>
-        <%= label_tag(:facility_id_facility, (fac.facility_type.name + fac.number.to_s)) %>
+        <div>
+          <% if fac.facility_type_id == params[:facility_type_id].to_i then %>
+          <%= radio_button(:booking, :facility_id, fac.id) %>
+          <%= label_tag(:facility_id_facility, (fac.facility_type.name + fac.number.to_s)) %>
+        </div>
+        <div>
+          <% if params[:facility_type_id] == "1" or params[:facility_type_id] == "3" then %>
+          <%= radio_button(:booking, :start_at, :value => "16:00:00") %>
+          <%= label_tag(:facility_id_facility, ("16:00:00 to 22:00:00")) %>
+          <% elsif params[:facility_type_id] == "2"%>
+          <% # @tennis.each do |court| %>
+          <% (@tennis_open..@tennis_close).step(7200).each do |timestamp| %>
+          <% timestamp = Time.at(timestamp).strftime("%H:%M:%S") %>
+          <%= radio_button(:booking, :start_at, timestamp) %>
+          <%= label_tag(:facility_id_facility, timestamp) %>
+          <% # end %>
+          <% end %>
+        </div>
+
+        <% end %>
+
       <% end %>
+    </div>
     <% end %>
   </div>
 
