--- a/app/views/bookings/_form.html.erb
+++ b/app/views/bookings/_form.html.erb
@@ -5,60 +5,25 @@
   <%= hidden_field(:booking, :booking_date, :value => Date.today.strftime("%Y-%m-%d")) %>
 
 
+  <% @facilities = Facility.where(facility_type_id: params[:facility_type_id]).to_a %>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-  <div class="row">
-    <div class="col-md-4">
-    <% @facilities.each do |fac| %>
-        <div>
-          <% if fac.facility_type_id == params[:facility_type_id].to_i then %>
-          <%= radio_button(:booking, :facility_id, fac.id) %>
-          <%= label_tag(:facility_id_facility, (fac.facility_type.name + fac.number.to_s)) %>
-        </div>
-        <div>
-          <% if params[:facility_type_id] == "1" or params[:facility_type_id] == "3" then %>
-          <%= radio_button(:booking, :start_at, :value => "16:00:00") %>
-          <%= label_tag(:facility_id_facility, ("16:00:00 to 22:00:00")) %>
-          <% elsif params[:facility_type_id] == "2"%>
-          <% # @tennis.each do |court| %>
-          <% (@tennis_open..@tennis_close).step(7200).each do |timestamp| %>
-          <% timestamp = Time.at(timestamp).strftime("%H:%M:%S") %>
-          <%= radio_button(:booking, :start_at, timestamp) %>
-          <%= label_tag(:facility_id_facility, timestamp) %>
-          <% # end %>
-          <% end %>
-        </div>
-
-        <% end %>
-
+  <% @facilities.each do |fac| %>
+    <div class="">
+      <%= radio_button(:booking, :facility_id, fac.id) %>
+      <%= label_tag(:facility_id_facility, (fac.facility_type.name + fac.number.to_s)) %>
+    </div>
+    <div class="">
+      <% @fac_type = FacilityType.find(params[:facility_type_id]) %>
+      <% @fac_open = @fac_type.opens_at.to_i %>
+      <% @fac_close = @fac_type.closes_at.to_i %>
+      <% (@fac_open...@fac_close).step(@fac_type.session_length * 3600).each do |timestamp| %>
+      <% timestamp = Time.at(timestamp).strftime("%H:%M:%S") %>
+      <%= radio_button(:booking, :start_at, timestamp) %>
+      <%= label_tag(:facility_id_facility, timestamp) %>
       <% end %>
     </div>
-    <% end %>
-  </div>
 
-<br>
-<br>
-  <div class="">
-    <p>
-      <%= params[:facility_type_id] %>
-      <%= current_user.inspect %>
-    </p>
-
-  </div>
+  <% end %>
 
 <br>
 <br>
