--- a/app/views/bookings/_form.html.erb
+++ b/app/views/bookings/_form.html.erb
@@ -1,30 +1,33 @@
-<%= form_for @booking, remote: true do |f| %>
-
-  <%= hidden_field(:booking, :facility_type_id, :value => params[:facility_type_id]) %>
-  <%= hidden_field(:booking, :user_id, :value => current_user.id) %>
-  <%= hidden_field(:booking, :booking_date, :value => Date.today.strftime("%Y-%m-%d")) %>
+<% @facilities.each do |fac| %>
+<h3><%= @fac_type.name + fac.number.to_s %></h3>
 
 
-  
-
-  <% @facilities.each do |fac| %>
-    <div class="">
-      <%= radio_button(:booking, :facility_id, fac.id) %>
-      <%= label_tag(:facility_id_facility, (fac.facility_type.name + fac.number.to_s)) %>
-    </div>
     <div class="">
       <% (@fac_open...@fac_close).step(@fac_type.session_length * 3600).each do |timestamp| %>
-      <% timestamp = Time.at(timestamp).strftime("%H:%M:%S") %>
-      <%= radio_button(:booking, :start_at, timestamp) %>
-      <%= label_tag(:facility_id_facility, timestamp) %>
-      <% end %>
+      <div class="col-md-1">
+
+        <%= form_for @booking, remote: true do |f| %>
+
+        <%= hidden_field(:booking, :facility_type_id, :value => params[:facility_type_id]) %>
+        <%= hidden_field(:booking, :user_id, :value => current_user.id) %>
+        <%= hidden_field(:booking, :booking_date, :value => Date.today.strftime("%Y-%m-%d"), :class => 'booking_date_input') %>
+        <%= hidden_field(:booking, :facility_id, :value => fac.id) %>
+
+        <% timestamp = Time.at(timestamp).strftime("%H:%M:%S") %>
+        <%= hidden_field(:booking, :start_at, :value => timestamp) %>
+        
+        <%= f.submit timestamp%>
+
+        <% end %>
+      </div>
     </div>
+
+
+
+  <br>
+  <br>
 
   <% end %>
 
-<br>
-<br>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+
 <% end %>
