--- a/app/views/partials/_footer.html.erb
+++ b/app/views/partials/_footer.html.erb
@@ -1,13 +1,45 @@
 <footer>
-  <div class="last-div">
-  <div class="container">
-    <div class="row">
-      <div class="copyright">
-&copy; 2017 JSH WDI-SG 8
-
+  <div id="contact">
+    <div class="container">
+      <div class="text-center">
+        <h3>Contact Us</h3>
+        <p>Fusce fermen tum neque a rutrum varius odio pede</p>
       </div>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6 wow fadeInUp" data-wow-offset="0" data-wow-delay="0.2s">
+          <h2>Contact us any time</h2>
+          <p>In a elit in lorem congue varius. Sed nec arcu.
+          Etiam sit amet augue.
+          Fusce fermen tum neque a rutrum varius odio pede
+          ullamcorp-er tellus ut dignissim nisi risus non tortor.
+          Aliquam mollis neque.</p>
+        </div>
 
+        <div class="col-md-6 wow fadeInUp" data-wow-offset="0" data-wow-delay="0.4s">
+          <h2>Contact Info</h2>
+          <ul>
+            <li><i class="fa fa-home fa-2x"></i> Office # 38, Suite 54 Elizebth Street, Victoria State Newyork, USA 33026</li><hr>
+            <li><i class="fa fa-phone fa-2x"></i> +38 000 129900</li><hr>
+            <li><i class="fa fa-envelope fa-2x"></i> info@domain.net</li>
+          </ul>
+        </div>
+      </div>
     </div>
   </div>
-</div>
+  <div class="text-center">
+    <div class="copyright">
+      &copy;  All Rights Reserved.
+              <div class="credits">
+                  <!--
+                      All the links in the footer should remain intact.
+                      You can delete the links only if you purchased the pro version.
+                      Licensing information: https://bootstrapmade.com/license/
+                      Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=Bikin
+                  -->
+                  <a href="https://bootstrapmade.com/">Free Bootstrap Themes</a> by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+              </div>
+    </div>
+  </div>
 </footer>
