--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,29 +1,153 @@
-<h1>Notice Board</h1>
-<div class="container">
-  <%= button_to "Refresh", root_path, :method => :get %>
-  <h4>Tennis:</h4>
+  <div class="slider">
+    <div id="about-slider">
+      <div id="carousel-slider" class="carousel slide" data-ride="carousel">
+        <!-- Indicators -->
+        <ol class="carousel-indicators visible-xs">
+          <li data-target="#carousel-slider" data-slide-to="0" class="active"></li>
+          <li data-target="#carousel-slider" data-slide-to="1"></li>
+          <li data-target="#carousel-slider" data-slide-to="2"></li>
+        </ol>
 
- <% @results[0..3].each do |result|%>
-     <pre>
-       <a href="<%=result.at_css("a")['href']%>" target="_blank"><%=result.at_css("a h3 span").text%></a>
-    </pre>
-  <% end%>
-<a href="http://bleacherreport.com/tennis">Source of this information: http://bleacherreport.com/tennis</a>
+        <div class="carousel-inner">
+          <div class="item active">
+            <img src="img/slider/pool.jpg" class="img-responsive" alt="">
+            <div class="carousel-caption">
+              <div class="wow fadeInUp" data-wow-offset="0" data-wow-delay="0.3s">
+                <h2><span>Modern Living</span></h2>
+              </div>
+              <div class="wow fadeInUp" data-wow-offset="0" data-wow-delay="0.6s">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing</p>
+              </div>
+              <div class="wow fadeInUp" data-wow-offset="0" data-wow-delay="0.9s">
+                <button type="button" name="button" class="btn btn-primary btn-lg">
+                  <%= link_to 'Make a Booking',bookings_path, class: 'text-muted'%>
+                </button>
+              </div>
+            </div>
+            </div>
+            <div class="item">
+            <img src="img/slider/bbq.jpg" class="img-responsive" alt="">
+            <div class="carousel-caption">
+              <div class="wow fadeInUp" data-wow-offset="0" data-wow-delay="1.0s">
+                <h2>Facilities</h2>
+              </div>
+              <div class="wow fadeInUp" data-wow-offset="0" data-wow-delay="1.3s">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing</p>
+              </div>
+              <div class="wow fadeInUp" data-wow-offset="0" data-wow-delay="1.6s">
+                <form class="form-inline">
+                  <div class="form-group">
+                    <button type="button" name="purchase" class="btn btn-primary btn-lg" required="required">Live Demo</button>
+                  </div>
+                  <div class="form-group">
+                    <button type="button" name="subscribe" class="btn btn-primary btn-lg" required="required">My Bookings</button>
+                  </div>
+                </form>
+              </div>
+            </div>
+            </div>
+            <div class="item">
+            <img src="img/slider/wifi.jpg" class="img-responsive" alt="">
+            <div class="carousel-caption">
+              <div class="wow fadeInUp" data-wow-offset="0" data-wow-delay="0.3s">
+                <h2>Modern Design</h2>
+              </div>
+              <div class="wow fadeInUp" data-wow-offset="0" data-wow-delay="0.6s">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing</p>
+              </div>
+              <div class="wow fadeInUp" data-wow-offset="0" data-wow-delay="0.9s">
+                <form class="form-inline">
+                  <div class="form-group">
+                    <button type="button" name="purchase" class="btn btn-primary btn-lg" required="required">Live Demo</button>
+                  </div>
+                  <div class="form-group">
+                    <button type="button" name="subscribe" class="btn btn-primary btn-lg" required="required">My Bookings</button>
+                  </div>
+                </form>
+              </div>
+            </div>
+            </div>
+        </div>
+        <a class="left carousel-control hidden-xs" href="#carousel-slider" data-slide="prev">
+          <i class="fa fa-angle-left"></i>
+        </a>
 
-<h2>Swimming:</h2>
-<% @swimming_results[0..3].each do |single_swim|%>
-    <pre>
-        <a href="<%=URI.join("http://www.bbc.com", single_swim.at_css("h3 a")['href']).to_s%>" target="_blank"><%=single_swim.at_css("h3 a span").text%></a>
-    </pre>
-  <%end%>
-<a href="http://www.bbc.com/sport/swimming">Source of this information: http://www.bbc.com/sport/swimming</a>
+        <a class=" right carousel-control hidden-xs"href="#carousel-slider" data-slide="next">
+          <i class="fa fa-angle-right"></i>
+        </a>
+      </div> <!--/#carousel-slider-->
+    </div><!--/#about-slider-->
+  </div><!--/#slider-->
 
-<h2>Events Around you!</h2>
-<% @events[0..3].each do |event|%>
-<pre>
-  <p> Title : <%=event.at_css("div.list-card__title").text.strip%></p>
-  <p> Date : <%=event.at_css("time.list-card__date").text.strip%></p>
-  <span><%=image_tag(event.at_css(".js-poster-image").attr('src'))%></span>
-  <p>Venue : <%=event.at_css("div.list-card__venue").text.strip%></p>
-</pre>
-<%end%>
+  <div id="happenings">
+		<div class="container">
+			<div class="text-center">
+				<h3>Happenings around</h3>
+				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit Lorem ipsum dolor sit<br>amet consectetur adipisicing elit</p>
+			</div>
+			<div class="row">
+				<figure class="effect-chico">
+					<div class="col-md-3 wow fadeInUp" data-wow-offset="0" data-wow-delay="0.3s">
+						<a href="img/work/1.jpg" class="flipLightBox">
+						<img src="img/work/1.jpg" class="img-responsive" alt="">
+						</a>
+					</div>
+				</figure>
+				<figure class="effect-chico">
+					<div class="col-md-3 wow fadeInUp" data-wow-offset="0" data-wow-delay="0.3s">
+						<a href="img/work/2.jpg" class="flipLightBox">
+						<img src="img/work/2.jpg" class="img-responsive" alt="">
+						</a>
+					</div>
+				</figure>
+				<figure class="effect-chico">
+					<div class="col-md-3 wow fadeInDown" data-wow-offset="0" data-wow-delay="0.3s">
+						<a href="img/work/3.jpg" class="flipLightBox">
+						<img src="img/work/3.jpg" class="img-responsive" alt="">
+						</a>
+					</div>
+				</figure>
+				<figure class="effect-chico">
+					<div class="col-md-3 wow fadeInDown" data-wow-offset="0" data-wow-delay="0.3s">
+						<a href="img/work/4.jpg" class="flipLightBox">
+						<img src="img/work/4.jpg" class="img-responsive" alt="">
+						</a>
+					</div>
+				</figure>
+			</div>
+		</div>
+		<div class="gallery">
+			<div class="container">
+				<div class="row">
+					<figure class="effect-chico">
+						<div class="col-md-3 wow fadeInUp" data-wow-offset="0" data-wow-delay="0.3s">
+							<a href="img/work/5.jpg" class="flipLightBox">
+							<img src="img/work/5.jpg" class="img-responsive" alt="">
+							</a>
+						</div>
+					</figure>
+					<figure class="effect-chico">
+						<div class="col-md-3 wow fadeInUp" data-wow-offset="0" data-wow-delay="0.3s">
+							<a href="img/work/6.jpg" class="flipLightBox">
+							<img src="img/work/6.jpg" class="img-responsive" alt="">
+							</a>
+						</div>
+					</figure>
+					<figure class="effect-chico">
+						<div class="col-md-3 wow fadeInDown" data-wow-offset="0" data-wow-delay="0.3s">
+							<a href="img/work/7.jpg" class="flipLightBox">
+							<img src="img/work/7.jpg" class="img-responsive" alt="">
+							</a>
+						</div>
+					</figure>
+					<figure class="effect-chico">
+						<div class="col-md-3 wow fadeInDown" data-wow-offset="0" data-wow-delay="0.3s">
+							<a href="img/work/8.jpg" class="flipLightBox">
+							<img src="img/work/8.jpg" class="img-responsive" alt="">
+							</a>
+						</div>
+					</figure>
+				</div>
+			</div>
+		</div>
+	</div><!--/#gallery-->
