Booking form: Calender months now render using AJAX. Time validation for booking model complete.

--- a/app/views/bookings/_calendar.html.erb
+++ b/app/views/bookings/_calendar.html.erb
@@ -11,7 +11,7 @@
   <% if @count*4 == @num_bookings_by_date %>
   <p>No more available slots</p>
   <% else %>
-  <%= link_to "Book now", new_booking_path(@booking, :facility_type_id => params[:facility_type_id], :booking_date => date), remote: true %>
+  <%= link_to "Book now", new_booking_path(:facility_type_id => params[:facility_type_id], :booking_date => date), remote: true %>
   <% end %>
 
   </div>
