--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -10,5 +10,5 @@
 
 <% end %>
 
-<div id="calendar" style="width:640px;height:480px;border:1px solid black"></div>
-<div id="booking-form" style="width:640px;height:480px;border:1px solid black"></div>
+<div id="calendar"></div>
+<div id="booking-form"></div>
