--- a/app/views/bookings/mybookings.html.erb
+++ b/app/views/bookings/mybookings.html.erb
@@ -1,12 +1,13 @@
 <h1>My bookings</h1>
 <% @bookings.each do |booking| %>
-<pre>
-  <%=booking.inspect%>
-</pre>
-<pre>
-  <%=booking[:qr_code]%>
-</pre>
-<button type="button" name="button" class="btn btn-primary">
-  <%= link_to 'Send QR Code', sendqr_path(:qr_code => booking.qr_code), class: 'text-primary'%>
-</button>
+  <pre>
+    <%=booking.inspect%>
+  </pre>
+  <pre>
+    <%=booking[:qr_code]%>
+  </pre>
+  <%= link_to 'Delete booking', booking, method: :delete, class: 'btn btn-primary text-primary'%>
+  <button type="button" name="button" class="btn btn-primary">
+    <%= link_to 'Send QR Code', sendqr_path(:qr_code => booking.qr_code), class: 'text-primary'%>
+  </button>
 <% end %>
