admin working without complaint flagging

--- a/app/views/complaints/destroy.js.erb
+++ b/app/views/complaints/destroy.js.erb
@@ -1,1 +1,1 @@
-$('#complaint-delete').html("<%= j (render 'message') %>");
+$('#complaint-delete-<%= j (params[:id]) %>').html("<%= j (render 'message') %>");
