--- a/app/views/bookings/_form.html.erb
+++ b/app/views/bookings/_form.html.erb
@@ -3,13 +3,13 @@
 
 <% @facilities.each do |fac| %>
 
-<h3><%= @fac_type.name + fac.number.to_s %></h3>
+<% if @fac_type.id != 4 %>
+<h3><%= @fac_type.name + " " + fac.number.to_s %></h3>
 
-    <div class="container" style="display:inline-flex">
+    <div style="display:inline-flex; flex-wrap:wrap;">
 
-      <% if @fac_type.id != 4 %>
         <% (@fac_open...@fac_close).step(@fac_type.session_length * 3600).each do |timestamp| %>
-          <div class="col-md-1">
+          <div class="col-md-3">
 
             <%= form_for @booking, remote: true do |f| %>
 
@@ -26,7 +26,7 @@
               <% if Booking.exists?(start_at: timestamp, booking_date: params[:booking_date], facility_id: fac.id) %>
               <%= f.submit timestamp, :disabled => true %>
               <% else %>
-              <%= f.submit timestamp%>
+              <%= f.submit timestamp, class: 'btn-submit'%>
               <% end %>
 
             <% end %>
@@ -34,6 +34,7 @@
       <% end %>
 
       <% else %>
+        <h3>Invite guests</h3>
         <%= form_for @booking, remote: true do |f| %>
         <%= hidden_field(:booking, :facility_type_id, :value => params[:facility_type_id]) %>
         <%= hidden_field(:booking, :user_id, :value => current_user.id) %>
