--- a/app/views/complaints/new.html.erb
+++ b/app/views/complaints/new.html.erb
@@ -10,6 +10,12 @@
     </p>
 
     <p>
+      <%= f.label :report_to_condo_management %><br>
+      <%= f.check_box :active%>
+    </p>
+
+
+    <p>
       <%= f.submit %>
     </p>
   <% end %>
