edited navbar, authentication check for admin operations, view complaint status for non-admin users from feature/navbar-sruti

--- a/app/views/partials/_navbar.html.erb
+++ b/app/views/partials/_navbar.html.erb
@@ -26,12 +26,24 @@
                   <li>
                   <%= link_to "Make Booking", bookings_path%>
                   </li>
+                  <% if current_user.an_admin? %>
+                    <li>
+                      <%= link_to "View all users", users_path %>
+                    </li>
+                    <li>
+                      <%= link_to "Add User", new_user_path %>
+                    </li>
+                  <% end %>
+                  <li>
+                    <%= link_to "View Complaints", complaints_path %>
+                  </li>
                   <li>
                   <%= link_to "Edit Profile", edit_user_registration_path%>
                   </li>
                   <li>
                   <%= link_to "Logout", destroy_user_session_path, method: :delete %>
                   </li>
+
                   <% else %>
                   <li>
                   <%= link_to "Log In", new_user_session_path%>
