--- a/app/views/complaints/index.html.erb
+++ b/app/views/complaints/index.html.erb
@@ -6,6 +6,9 @@
     <div id="complaint-delete-<%=item.id%>">
       <p><%= link_to item.title, "/complaints/#{item.id}", remote: true %></p>
       <p><%=item.text%></p>
+      <% if current_user.an_admin? == false %>
+      <p>Complaint Status: <%= "#{item.active ? 'Active' : 'Inactive' }" %></p>
+      <% end %>
       <%if current_user.an_admin? %>
         <%= link_to "#{item.active ? 'Active' : 'Inactive' }", item, method: :patch, class: "btn btn-primary" %>
         <p><%= link_to "Remove Complaint", item, remote: true, method: :delete, class: "btn btn-primary" %></p>
