--- a/app/views/complaints/_complaint.html.erb
+++ b/app/views/complaints/_complaint.html.erb
@@ -1,2 +1,3 @@
-<h1><font color="black"><%=@complaint.title%></font></h1>
-<p><%=@complaint.text%></p>
+
+<h2 style="padding-left:15px"><strong>Issue: </strong><%=@complaint.title%></h2>
+<p style="padding-left:15px">Description: <%=@complaint.text%></p>
