--- a/app/views/bookings/_calendar.html.erb
+++ b/app/views/bookings/_calendar.html.erb
@@ -14,9 +14,9 @@
     <p>No more available slots</p>
     <% else %>
       <% if params[:facility_type_id].to_i != 4 %>
-          <%= link_to "Book now", new_booking_path(:facility_type_id => params[:facility_type_id], :booking_date => date),remote: true %>
+          <%= link_to "Book", new_booking_path(:facility_type_id => params[:facility_type_id], :booking_date => date),remote: true %>
       <% else %>
-          <%= link_to "Generate QR", new_booking_path(:facility_type_id => params[:facility_type_id], :booking_date => date),remote: true %>
+          <%= link_to "Invite", new_booking_path(:facility_type_id => params[:facility_type_id], :booking_date => date),remote: true %>
       <% end %>
     <% end %>
   <% end %>
