--- a/app/views/complaints/_form.html.erb
+++ b/app/views/complaints/_form.html.erb
@@ -1,5 +1,6 @@
-<%=form_for [@complaint, Comment.new], remote: true do |f|%>
-  <%= f.label :text %><br>
-  <%= f.text_area :text %>
-  <%= f.submit 'Add Comment'%>
+<%=form_for [@complaint, Comment.new], { class: "form-group", remote: true } do |f|%>
+  <div class="col-md-6">
+    <%= f.text_area :text, class:"form-control", placeholder: "Add a comment" %>
+    <%= f.submit 'Submit'%>
+  </div>
 <%end%>
