--- a/app/views/complaints/new.html.erb
+++ b/app/views/complaints/new.html.erb
@@ -1,21 +1,15 @@
-<%=form_for :complaint, url: complaints_path , remote: true do |f|%>
-    <p>
-      <%= f.label :title %><br>
-      <%= f.text_field :title %>
-    </p>
-
-    <p>
-      <%= f.label :text %><br>
-      <%= f.text_area :text %>
-    </p>
-
-    <p>
-      <%= f.label :report_to_condo_management %><br>
-      <%= f.check_box :active%>
-    </p>
+<%= render 'partials/header' %>
 
 
-    <p>
+<%=form_for :complaint, { :url => complaints_path, :class => "form-group", remote: true }  do |f|%>
+    <div class="col-md-6 col-md-offset-3" >
+      <h2>Raise an Issue</h2>
+      <%= f.text_field :title, class: "form-control", placeholder: "Your issue" %>
+      <%= f.text_area :text, class: "form-control", placeholder: "Describe your issue" %>
+      <div style="display:inline">
+        <%= f.check_box :active %>
+        <%= f.label :report_to_condo_management %><br>
+      </div>
       <%= f.submit %>
-    </p>
+    </div>
   <% end %>
