--- a/app/views/complaints/new.html.erb
+++ b/app/views/complaints/new.html.erb
@@ -8,7 +8,7 @@
       <%= f.text_area :text, class: "form-control", placeholder: "Describe your issue" %>
       <div style="display:inline">
         <%= f.check_box :active %>
-        <%= f.label :report_to_condo_management %><br>
+        <%= f.label 'For information' %><br>
       </div>
       <%= f.submit %>
     </div>
