--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -18,9 +18,12 @@
       </div>
 
         <div class="row">
-          <div id="calendar" class="col-md-8" style="margin-top:15px"></div>
-          <div id="booking-form" class="col-md-4" style="margin-top:15px"></div>
+          <div id="calendar" class="col-md-8" style="margin-top:15px">
+            <h3>Choose a facility or invite guests</h3>
+          </div>
         </div>
+        <div id="booking-form" class="col-md-4" style="margin-top:15px"></div>
+      </div>
     </div>
   </div>
 </div>
