--- a/app/views/complaints/index.html.erb
+++ b/app/views/complaints/index.html.erb
@@ -17,8 +17,8 @@
           <p><em>Status: <%= "#{item.active ? 'Pending' : 'Complete' }" %></em></p>
         <% end %>
         <%if current_user.an_admin? %>
-        <%= link_to "#{item.active ? 'Pending' : 'Complete' }", item, method: :patch, class: "btn btn-primary",style: 'margin: 3px 0; border-radius:0px; padding:3px 12px;' %>
-        <%= link_to "Remove Complaint", item, remote: true, method: :delete, class: "btn btn-danger nocorner",style: 'margin: 3px 0; border-radius:0px; padding:3px 12px;' %>
+        <%= link_to "#{item.active ? 'Pending' : 'Complete' }", item, method: :patch, class: "btn btn-primary", style: 'margin: 3px 0; border-radius:0px; padding:3px 12px;' %>
+        <%= link_to "Remove Complaint", item, remote: true, method: :delete, class: "btn btn-danger",style: 'margin: 3px 0; border-radius:0px; padding:3px 12px;' %>
         <%end%>
       </div>
       <%end%>
