--- a/app/views/complaints/new.html.erb
+++ b/app/views/complaints/new.html.erb
@@ -4,7 +4,7 @@
 <%=form_for :complaint, { :url => complaints_path, :class => "form-group", remote: true }  do |f|%>
     <div class="col-md-6 col-md-offset-3" >
       <h2>Raise an Issue</h2>
-      <%= f.text_field :title, class: "form-control", placeholder: "Your issue" %>
+      <%= f.text_field :title, class: "form-control", placeholder: "Your issue", required: true %>
       <%= f.text_area :text, class: "form-control", placeholder: "Describe your issue" %>
       <div style="display:inline">
         <%= f.check_box :active %>
