add footer and homepage feature section

--- a/app/views/partials/_footer.html.erb
+++ b/app/views/partials/_footer.html.erb
@@ -1,3 +1,32 @@
-<footer>
+<footer id="footer">
+    <div class="container">
+        <div class="col-md-4">
+            <p class="copyright">Copyright:
+                <span>2015</span>
+                . Design and Developed by
+                <a href="http://www.Themefisher.com">Themefisher</a>
+            </p>
+        </div>
+        <div class="col-md-8">
+            <!-- Social Media -->
+            <ul class="social">
+                <li>
+                    <a href="https://github.com/hsquek" target="_blank">
+                        <i class="ion-social-github">@hsquek</i>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://github.com/skeerti2" target="_blank">
+                        <i class="ion-social-github">@skeerti2</i>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://github.com/johnacs" target="_blank">
+                        <i class="ion-social-github">@johnacs</i>
+                    </a>
+                </li>
 
+            </ul>
+        </div>
+    </div>
 </footer>
