--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,4 @@
-<section id="hero-area" >
+<section id="hero-area">
     <div class="container">
         <div class="row">
             <div class="col-md-12 text-center">
@@ -6,56 +6,108 @@
 
                     <!-- Slider -->
                     <section class="cd-intro">
-                        <h1 class="wow fadeInUp animated cd-headline slide" data-wow-delay=".4s" >
-                        <span>Welcome to the Peak</span><br>
-                        <span class="cd-words-wrapper">
-                            <b class="is-visible">Centrally located</b>
-                            <b>Fully furnished</b>
-                            <b>Many amenities</b>
-                            <b>QR Code gate access</b>
-                        </span>
+                        <h1 class="wow fadeInUp animated cd-headline slide" data-wow-delay=".4s">
+                            <span>Welcome to the Peak</span><br>
+                            <span class="cd-words-wrapper">
+                                <b class="is-visible">Centrally located</b>
+                                <b>Fully furnished</b>
+                                <b>Many amenities</b>
+                                <b>QR Code gate access</b>
+                            </span>
                         </h1>
-                        </section> <!-- cd-intro -->
-                        <!-- /.slider -->
-                        <h2 class="wow fadeInUp animated" data-wow-delay=".6s" >
-                            A stunningly beautiful home designed to help you fulfill your aspirations in life. <br>Your choice of 168 luxurious units, ranging from 1-, 2-, 3-bedroom units to an exclusive penthouse.
-                        </h2>
-                    </div>
+                    </section>
+                    <!-- cd-intro -->
+                    <!-- /.slider -->
+                    <h2 class="wow fadeInUp animated" data-wow-delay=".6s">
+                        A stunningly beautiful home designed to help you fulfill your aspirations in life.
+                        <br>Your choice of 168 luxurious units, ranging from 1-, 2-, 3-bedroom units to an exclusive penthouse.
+                    </h2>
                 </div>
             </div>
         </div>
-    </section><!--/#main-slider-->
-    <section id="happenings" class="works">
-        <div class="container">
-            <div class="section-heading">
-                <h1 class="title wow fadeInDown" data-wow-delay=".3s">Happening around you</h1>
-            </div>
-            <div class="row" style="display:flex; flex-wrap:wrap;">
-              <% @events[0...6].each do |event|%>
-              <div class="col-sm-4 col-xs-12">
-                  <figure class="wow fadeInLeft animated portfolio-item" style="align-items:stretch;" data-wow-duration="500ms" data-wow-delay="0ms">
-                      <div class="img-wrapper">
-                        <%=image_tag(event.at_css(".js-poster-image").attr('src'), class:'img-responsive', style: 'min-width:100%')%>
-                          <div class="overlay">
-                              <div class="buttons">
-                                  <a target="_blank" href="<%=event.css('a')[0]["href"]%>">Details</a>
-                              </div>
-                          </div>
-                      </div>
-                      <figcaption>
-                      <h4>
-                        <a href="<%=event.css('a')[0]["href"]%>" target="_blank"><%=event.at_css("div.list-card__title").text.strip%></a>
-
-                      </a>
-                      </h4>
-                      <p>
-                          <%=event.at_css("time.list-card__date").text.strip%>
-                      </p>
-                      </figcaption>
-                  </figure>
-              </div>
-              <%end%>
-            </div>
-            <h5>Source: https://www.eventbrite.com</h5>
+    </div>
+</section>
+<!--/#main-slider-->
+<section id="happenings" class="works">
+    <div class="container">
+        <div class="section-heading">
+            <h1 class="title wow fadeInDown" data-wow-delay=".3s">Happening around you</h1>
         </div>
-    </section> <!-- #works -->
+        <div class="row" style="display:flex; flex-wrap:wrap;">
+            <% @events[0...6].each do |event|%>
+            <div class="col-sm-4 col-xs-12">
+                <figure class="wow fadeInLeft animated portfolio-item" style="align-items:stretch;" data-wow-duration="500ms" data-wow-delay="0ms">
+                    <div class="img-wrapper">
+                        <%=image_tag(event.at_css(".js-poster-image").attr('src'), class:'img-responsive', style: 'min-width:100%')%>
+                        <div class="overlay">
+                            <div class="buttons">
+                                <a target="_blank" href="<%=event.css('a')[0][" href"]%>">Details</a>
+                            </div>
+                        </div>
+                    </div>
+                    <figcaption>
+                        <h4>
+                            <a href="<%=event.css('a')[0][" href"]%>" target="_blank"><%=event.at_css("div.list-card__title").text.strip%></a>
+
+                        </a>
+                    </h4>
+                    <p>
+                        <%=event.at_css("time.list-card__date").text.strip%>
+                    </p>
+                </figcaption>
+            </figure>
+        </div>
+        <%end%>
+    </div>
+    <h5>Source: https://www.eventbrite.com</h5>
+</div>
+</section>
+<!-- #works -->
+<section id="feature">
+<div class="container">
+    <div class="section-heading">
+        <h1 class="title wow fadeInDown" data-wow-delay=".3s">Features</h1>
+    </div>
+    <div class="row">
+        <div class="col-md-4 col-lg-4 col-xs-12">
+            <div class="media wow fadeInUp animated" data-wow-duration="500ms" data-wow-delay="300ms">
+                <div class="media-left">
+                    <div class="icon">
+                        <i class="ion-ios-calendar-outline"></i>
+                    </div>
+                </div>
+                <div class="media-body">
+                    <h2 class="media-heading">Online Booking</h2>
+                    <h4>Manage your facility bookings, anytime, anywhere</h4>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4 col-lg-4 col-xs-12">
+            <div class="media wow fadeInDown animated" data-wow-duration="500ms" data-wow-delay="600ms">
+                <div class="media-left">
+                    <div class="icon">
+                        <i class="ion-ios-compose-outline"></i>
+                    </div>
+                </div>
+                <div class="media-body">
+                    <h2 class="media-heading">Feedback</h2>
+                    <h4>Post issues and receive timely updates on estate matters</h4>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4 col-lg-4 col-xs-12">
+            <div class="media wow fadeInDown animated" data-wow-duration="500ms" data-wow-delay="900ms">
+                <div class="media-left">
+                    <div class="icon">
+                        <i class="ion-ios-clock-outline"></i>
+                    </div>
+                </div>
+                <div class="media-body">
+                    <h2 class="media-heading">Convenience</h2>
+                    <h4 class="media-heading">Ensure secure and hassle-free estate access for your guests</h4>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+</section>
