--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,9 @@
   </head>
 
   <body>
+    <div class="container">
       <%= render "partials/navbar"%>
+    </div>
 
     <div class="container" style="margin:80px 0px 0px;">
       <% if notice %>
