--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,7 +32,7 @@
       <%= render "partials/navbar"%>
     </div>
 
-    <div class="container" style="margin-top:80px auto;">
+    <div class="container" style="margin:80px auto;">
       <% if notice %>
       <p class="alert alert-success"><%= notice %></p>
       <% end %>
