--- a/public/css/main.css
+++ b/public/css/main.css
@@ -509,8 +509,13 @@ figure figcaption p {
 }
 #footer {
   background: #fff;
-  padding: 25px 0;
   color: #555;
+  bottom: 0;
+  margin: 0 auto !important;
+  text-align: center !important;
+  width: 100% !important;
+  height: 40px;
+  position: absolute;
 }
 #footer .copyright {
   font-size: 13px;
