--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,13 +30,8 @@
   <body>
       <%= render "partials/navbar"%>
 
-    <div class="container" style="margin:80px 0px 0px;">
-      <% if notice %>
-      <p class="alert alert-success"><%= notice %></p>
-      <% end %>
-      <% if alert %>
-      <p class="alert alert-danger"><%= alert %></p>
-      <% end %>
+    <div class="container" style="margin:80px auto 0px auto;" id="flash-alert">
+      <%= render 'partials/flash' %>
     </div>
 
     <div class="container">
